--- a/gtc_kpu.html
+++ b/gtc_kpu.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Own CSS3 with linking SCSS, SASS
     --------------------------------------------------------------------->
-    <link rel="stylesheet" href="./resource/css/style.css">
+    <link rel="stylesheet" href="./resource/scss/style.css">
 
 </head>
 <body>
@@ -42,14 +42,14 @@
                     <div class="logo">
                         <img src="resource/gallery/tech king.jpg" alt="Tech King" width="75">
                     </div>
-                    <a class="navbar-brand" href="#" id="nav-header">Tech King</a>
+                    <a class="navbar-brand" href="index.html" id="nav-header">Tech King</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">About</a>
@@ -66,11 +66,13 @@
               </nav>
         </div>
         <div class="main-hero">
-            <h1>Boreal Coffee Clone</h1>
+            <h1>GTC - KyaukPhu</h1>
             <p>
-                This page contains the case study of Boreal Coffee Clone Website which includes the Project Overview, Tools Used and Live Links to the official product.
+                This page contains the case study of GTC - KyaukPhyu Website which includes the Project Overview, Tools Used and Live Links to the official product.
             </p>
-            <button class="btn btn-primary">Live Link</button>
+            <a href="https://gtc-kyaukphyu.netlify.app/" target="_blank">
+                <button class="btn btn-primary">Live Link</button>
+            </a>
         </div>
 
     </header>
@@ -78,20 +80,20 @@
     <section class="projects about_me project-page">
         <div class="container">
             <div class="row">
-                <!-- Dopefolio Project -->
+                <!-- GTC - KyaukPhyu -->
                 <div class="col-md-12">
                     <div class="gallery">
-                        <img src="resource/gallery/dopefolio.jpeg" alt="" width="100%">
+                        <img src="resource/gallery/gtc-kyaukphyu.jpg" alt="" width="100%">
                     </div>
                 </div>
                 <div class="col-md-12 mt-5 d-flex align-items-center main-content">
                     <div class="content">
-                        <h2>Boreal Coffee Clone</h2>
+                        <h2>GTC - KyaukPhu</h2>
                         <p>
-                            I decided to recreate the Frontend of Boreal Coffee's official Web App as I got attracted to their beautiful UI and it was a great opportunity for me to showcase my frontend skills by rebuilding the UI and it ended up being a great experience for me.
+                            I decided to recreate the Backend of GTC - KyaukPhyu  as I got attracted to their beautiful UI and it was a great opportunity for me to showcase my frontend skills by rebuilding the UI and it ended up being a great experience for me.
                         </p>
                         <p>
-                            I used my frontend tools to build the User Interface which works on all types of devices along with the SPA library to make the frontend perform faster.
+                            I used my frontend tools to build the User Interface to make the frontend perform faster.
                         </p>
                         <p>
                             Feel free to check out the Project by visiting the Live Link.
@@ -104,16 +106,20 @@
                         <button class="btn btn-default">HTML</button>
                         <button class="btn btn-default">CSS</button>
                         <button class="btn btn-default">JavaScript</button>
-                        <button class="btn btn-default">SASS</button>
-                        <button class="btn btn-default">Git</button>
-                        <button class="btn btn-default">Responsive Design</button>
+                        <button class="btn btn-default">jQuery</button>
+                        <button class="btn btn-default">Git & GitHub</button>
+                        <button class="btn btn-default">Netlify Host</button>
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="about see-live mt-4">
                         <h2>See Live</h2>
-                        <button class="btn btn-default px-4">Project Link</button>
-                        <button class="btn btn-default px-5" id="back">Go Back</button>
+                        <a href="https://github.com/techking11/gtc_kyaukphyu_web_team_pj" target="_blank">
+                            <button class="btn btn-default px-4">Project Link</button>
+                        </a>
+                        <a href="index.html">
+                            <button class="btn btn-default px-5" id="back">Go Back</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -135,16 +141,19 @@
                     <div class="social">
                         <ul class="list-group list-group-horizontal">
                             <li class="list-group-item">
-                                <i class="fa-brands fa-linkedin-in"></i>
+                                <a href="https://github.com/techking11" target="_blank">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
                             </li>
                             <li class="list-group-item">
-                                <i class="fa-brands fa-twitter"></i>
+                                <a href="https://www.linkedin.com/in/tech-king-143509276/" target="_blank">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
                             </li>
                             <li class="list-group-item">
-                                <i class="fa-brands fa-youtube"></i>
-                            </li>
-                            <li class="list-group-item">
-                                <i class="fa-brands fa-github"></i>
+                                <a href="https://twitter.com/TechKin1132" target="_blank">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
                             </li>
                         </ul>
                     </div>
