--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="main-hero">
             <h1>Hey, I'm Mr. Nay Myo Aung</h1>
             <p>
-                A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product
+                Junior Web Developer focused building the Frontend of Websites and Web Applications that leads to the success of the overall product
             </p>
             <a href="#projects">
                 <button class="btn btn-primary">Projects</button>
@@ -111,7 +111,7 @@
                     <div class="about mt-5">
                         <h2>Get to know me</h2>
                         <p>
-                            I'm a <b>Frontend Web Developer</b> building the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the <b>Projects</b> section.
+                            I'm a <b>Junior Web Developer</b> building the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the <b>Projects</b> section.
                         </p>
                         <p>
                             I also like sharing content related to the stuff that I have learned over the years in <b>Web Development</b> so it can help other people of the Dev Community. Feel free to Connect where I post useful content related to Web Development and Programming
@@ -324,7 +324,7 @@
                 <div class="col-sm-6">
                     <h4>Mr. Nay Myo Aung</h4>
                     <p>
-                        A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product.
+                        Junior Web Developer focused building the Frontend of Websites and Web Applications that leads to the success of the overall product.
                     </p>
                 </div>
                 <div class="col-sm-1 col-md-2 col-lg-4"></div>
