--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Site Team Name or Founder Name -->
     <meta name="author" content="">
 
-    <title>Tech King | Tech King Codes | Frontend Web Developer</title>
+    <title>Nay Myo Aung | Junior Web Application Developer</title>
     <!-- Site tabar logo icon show -->
     <link rel="shortcut icon" href="resource/gallery/techking.ico" type="image/x-icon">
 
@@ -42,7 +42,7 @@
                     <div class="logo">
                         <img src="resource/gallery/tech king.jpg" alt="Tech King" width="75">
                     </div>
-                    <a class="navbar-brand" href="index.html" id="nav-header">Tech King</a>
+                    <a class="navbar-brand" href="index.html" id="nav-header">Nay Myo Aung</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
