--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <nav class="navbar navbar-expand-sm bg-white">
                 <div class="container-lg">
                     <div class="logo">
-                        <img src="resource/gallery/tech king.jpg" alt="Tech King" width="75">
+                        <img src="resource/gallery/tech king.jpg" alt="Tech King" width="75" style="border-radius: 50%;">
                     </div>
                     <a class="navbar-brand" href="index.html" id="nav-header">Nay Myo Aung</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
