--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="main-hero">
             <h1>Hey, I'm Mr. Nay Myo Aung</h1>
             <p>
-              PHP focused building the Websites and Web Applications that leads to the success of the overall product
+              PHP Developer focused building the Websites and Web Applications that leads to the success of the overall product
             </p>
             <a href="#projects">
                 <button class="btn btn-primary">Projects</button>
