--- a/index.html
+++ b/index.html
@@ -151,12 +151,14 @@
                         <button class="btn btn-default">Figma</button>
 
                         <h3 class="skillSubTitle">Backend Skills</h3>
+                        <button class="btn btn-default">PHP</button>
+                        <button class="btn btn-default">Laravel</button>
+                        <button class="btn btn-default">MSSQL</button>
+                        <button class="btn btn-default">MySQL</button>
+                        <button class="btn btn-default">C#.NET</button>
+                        <button class="btn btn-default">VB.NET</button>
                         <button class="btn btn-default">NodeJS Basic</button>
                         <button class="btn btn-default">ExpressJS Basic</button>
-                        <button class="btn btn-default">MySQL</button>
-                        <button class="btn btn-default">SQL</button>
-                        <button class="btn btn-default">PHP</button>
-                        <button class="btn btn-default">C#.NET</button>
                         
                     </div>
                 </div>
